Update1senti.html

--- a/senti.html
+++ b/senti.html
@@ -1,24 +1,239 @@
 <!DOCTYPE html>
 
-
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Space Explorer Quiz</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Space Explorer Quiz</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+```
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
+
+    .quiz-container {
+        background: rgba(255, 255, 255, 0.95);
+        border-radius: 20px;
+        padding: 40px;
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        width: 100%;
+        backdrop-filter: blur(10px);
+    }
+
+    .start-screen {
+        text-align: center;
+    }
+
+    .start-screen h1 {
+        font-size: 2.5em;
+        margin-bottom: 20px;
+        color: #333;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .start-screen p {
+        font-size: 1.2em;
+        color: #666;
+        margin-bottom: 30px;
+        line-height: 1.6;
+    }
+
+    .btn {
+        background: linear-gradient(135deg, #667eea, #764ba2);
+        color: white;
+        border: none;
+        padding: 15px 30px;
+        font-size: 1.1em;
+        border-radius: 25px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+    }
+
+    .btn:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 10px 25px rgba(102, 126, 234, 0.4);
+    }
+
+    .btn:active {
+        transform: translateY(-1px);
+    }
+
+    .question-container {
+        display: none;
+    }
+
+    .progress-bar {
+        width: 100%;
+        height: 8px;
+        background: #e0e0e0;
+        border-radius: 4px;
+        margin-bottom: 30px;
+        overflow: hidden;
+    }
+
+    .progress-fill {
+        height: 100%;
+        background: linear-gradient(90deg, #667eea, #764ba2);
+        width: 0%;
+        transition: width 0.5s ease;
+        border-radius: 4px;
+    }
+
+    .question-number {
+        font-size: 0.9em;
+        color: #888;
+        margin-bottom: 10px;
+        font-weight: 500;
+    }
+
+    .question {
+        font-size: 1.4em;
+        color: #333;
+        margin-bottom: 30px;
+        font-weight: 600;
+        line-height: 1.4;
+    }
+
+    .answers {
+        margin-bottom: 30px;
+    }
+
+    .answer {
+        background: #f8f9fa;
+        border: 2px solid #e9ecef;
+        border-radius: 12px;
+        padding: 15px 20px;
+        margin-bottom: 15px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-size: 1.1em;
+        color: #333;
+    }
+
+    .answer:hover {
+        background: #e3f2fd;
+        border-color: #2196f3;
+        transform: translateX(5px);
+    }
+
+    .answer.selected {
+        background: #e3f2fd;
+        border-color: #2196f3;
+        font-weight: 600;
+    }
+
+    .answer.correct {
+        background: #e8f5e8;
+        border-color: #4caf50;
+        color: #2e7d32;
+    }
+
+    .answer.incorrect {
+        background: #ffebee;
+        border-color: #f44336;
+        color: #c62828;
+    }
+
+    .results-screen {
+        display: none;
+        text-align: center;
+    }
+
+    .results-screen h2 {
+        font-size: 2.2em;
+        color: #333;
+        margin-bottom: 30px;
+    }
+
+    .score {
+        font-size: 3em;
+        font-weight: bold;
+        color: #667eea;
+        margin-bottom: 20px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .score-message {
+        font-size: 1.3em;
+        color: #666;
+        margin-bottom: 30px;
+        line-height: 1.5;
+    }
+
+    .restart-btn {
+        background: linear-gradient(135deg, #4caf50, #45a049);
+    }
+
+    .restart-btn:hover {
+        box-shadow: 0 10px 25px rgba(76, 175, 80, 0.4);
+    }
+
+    .hidden {
+        display: none !important;
+    }
+
+    #nextBtn {
+        display: none;
+        margin-top: 20px;
+    }
+
+    @media (max-width: 768px) {
+        .quiz-container {
+            padding: 30px 20px;
+        }
+
+        .start-screen h1 {
+            font-size: 2em;
+        }
+
+        .question {
+            font-size: 1.2em;
+        }
+
+        .answer {
+            padding: 12px 15px;
+            font-size: 1em;
+        }
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
+    .quiz-container > div {
+        animation: fadeIn 0.5s ease;
+    }
+</style>
+```
+
 </head>
 <body>
     <div class="quiz-container">
         <!-- Start Screen -->
         <div class="start-screen" id="startScreen">
-            <h1>🤖 SentientAGI Quiz</h1>            
-            </body>
-            </html>
+            <h1>🤖 SentientAGI Quiz</h1>
             <p>Test your knowledge about artificial general intelligence and machine learning!</p>
             <button class="btn" onclick="startQuiz()">Start Quiz</button>
         </div>
 
+```
     <!-- Question Screen -->
     <div class="question-container" id="questionContainer">
         <div class="progress-bar">
@@ -196,11 +411,7 @@
         score = 0;
     }
 </script>
-<style>
-    #nextBtn {
-    display: none;
-    }
-</style>
+```
 
 </body>
 </html>
